[package]
name = "xorstring"
version = "0.2.0"
authors = ["Mariell Hoversholm <proximyst@proximyst.com>"]
edition = "2018"

repository = "https://github.com/Proximyst/xorstring"
license = "BSD-3-Clause"
description = "Compile-time string XOR encryption."

[dependencies]
xorstring-procmacro = { path = "./xorstring-procmacro" }
